- D3D12 instrumentation is now thread-safe.
- Timeline can be now navigated with WASD keys.
- Symbol file paths are now normalized on libbacktrace systems. For example,
  instead of "/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/12.2.0/../../../../
  include/c++/12.2.0/bits/std_mutex.h" Tracy will now report such file as
  "/usr/include/c++/12.2.0/bits/std_mutex.h".


v0.8.2 (2022-06-28)
-------------------

- Added support for debuginfod debug information services. Note that
  since this depends on proper system configuration, vendors providing
  the debug information, and network retrieval, it is disabled by
  default. To enable, compile the profiled application with the
  TRACY_DEBUGINFOD define and link with libdebuginfod.
- When Tracy server-side utilities are build with MSVC, the required
  libraries will be now automatically retrieved and built with vcpkg.
- Added microarchitecture data for: Bonnell, Airmont, Goldmont, Goldmont
  Plus, Tremont.
- Recognize additional CPUIDs of Zen 3, Alder Lake, Ice Lake
  microarchitectures.
- Assembly line width will be now extended, if needed. Previously the line
  width was calculated for the initial layout and changing amount of
  displayed data (especially listing the read/written registers) didn't
  affect this, which may have made some lines partially unreadable.
- Added ability to filter call stacks in memory tab by inactive allocations.
  Filtering by inactive allocations helps to pinpoint wasteful allocations
  in the program.
- Plot graph will no longer display min/max values interpolated for
  animation, but rather true values.
- The CPU topology tree structure was replaced by a CPU schematic showing
  the same thing in a more concise way.


v0.8.1 (2022-04-21)
-------------------

- Support for pre-0.7 traces has been dropped.
- Update utility can now scan for source files missing in the trace cache,
  if the '-c' parameter is given. Found files will be added to the cache.