@@ -80,6 +80,9 @@ v0.x.x (xxxx-xx-xx)
   instead of "/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/12.2.0/../../../../
   include/c++/12.2.0/bits/std_mutex.h" Tracy will now report such file as
   "/usr/include/c++/12.2.0/bits/std_mutex.h".
+- The import-chrome utility interprets Instant (`i`/`I`) events where the
+  `name` field contains the word `frame` as a frame event. The `name` is the
+  frame set name.
 
 
 v0.8.2 (2022-06-28)
